syntax = "proto3";

package foundation.v1;

import "google/protobuf/timestamp.proto";

message LoginRequest {
  oneof credentials {
    UserPass username_password = 1;
    AuthToken auth_token = 2;
  }
}

message UserPass {
  string username = 1;
  string password = 2;
}

message AuthToken {
  string token_source = 1;
  string token = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expiry = 3;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}